--- a/typescript/tsconfig.json
+++ b/typescript/tsconfig.json
@@ -1,10 +1,14 @@
 {
-    "compilerOptions": {
-        "module": "commonjs",
-        "target": "es5",
-        "sourceMap": true
-    },
-    "exclude": [
-        "node_modules"
+  "compilerOptions": {
+    "module": "commonjs",
+    "target": "es5",
+    "sourceMap": true,
+    "lib": [
+      "dom",
+      "es6"
     ]
+  },
+  "exclude": [
+    "node_modules"
+  ]
 }
